codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resume_replay_open_subagent_history_cells.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1360
expression: replayed_history
---
• Spawned Avicenna [fast-worker] (arcanine 1m medium)
  └ Compute the exact value.
