codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__standalone_side_context_label.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 615
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask a follow-up question                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project              Standalone side conversation  "
