codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: tmp · feat/awesome-feature · thread title · Read Only · on-request
terminal title: thread title | feat/awesome-feature | Tasks 0/0
