codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_notification_completion_hides_subagent_panel_row.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1139
expression: screen
---


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
