codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_panel_hides_goal_supervisor_after_late_metadata.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: screen
---


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
