codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_panel_hides_goal_supervisor_rows.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: screen
---

• Subagents (0s • 1 subagent running • esc to interrupt)
• [#1] Explorer running — Audit the TUI app-server event flow and report visible regressions.


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
