codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_panel_reclassifies_watchdog_after_late_metadata.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: screen
---

• Subagents (0s • no subagents running • esc to interrupt)
• [#1] [watchdog] Pauli idle — Every time you start, respond with exactly pong.


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
