codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_panel_renders_subagent_and_watchdog_rows.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 718
expression: screen
---

• Subagents (0s • 2 subagents, 1 running • esc to interrupt)
• [#1] Explorer running — Audit the TUI app-server event flow and report visible regressions.
• [#2] [watchdog] Watcher idle — Watch the worker for stalled progress.


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
